# OpenTrader

./: CMakeLists.txt  README.md
OpenTrader/: Makefile  OpenTrader.cpp  packages.config
OpenTrader/include/: Job_queue.h  cl_context.h  cl_ma_optimizer.h  cl_macd_optimizer.h  cl_optimizer.h  cl_rsi_optimizer.h  cl_stochastic_optimizer.h  ind_backtest.h  indicator.h  optimizer.h  optimizer_factory.h  position.h  stdafx.h  util.h
OpenTrader/lib/: Job_queue.cpp  ind_backtest.cpp  indicator.cpp  optimizer.cpp  optimizer_factory.cpp  position.cpp  util.cpp
OpenTrader/lib/cl/: cl_context.cpp  cl_ma_optimizer.cpp  cl_macd_optimizer.cpp  cl_optimizer.cpp  cl_rsi_optimizer.cpp  cl_stochastic_optimizer.cpp  ma.cl  macd.cl  rsi.cl  stochastic.cl
